tests/compilation/method_attrs.stderr
error: unknown attribute
 --> tests/compilation/method_attrs.rs:1:29
  |
1 | #[dyn_utils::dyn_compatible(unknown)]
  |                             ^^^^^^^

error: expected `=`
 --> tests/compilation/method_attrs.rs:6:34
  |
6 | #[dyn_utils::dyn_compatible(trait(Dyn))]
  |                                  ^

error: expected identifier
  --> tests/compilation/method_attrs.rs:11:37
   |
11 | #[dyn_utils::dyn_compatible(trait = ?)]
   |                                     ^

error: attribute must be used on a method with Return Position Impl Trait
  --> tests/compilation/method_attrs.rs:18:17
   |
18 |     #[dyn_utils(storage = dyn_utils::DefaultStorage)]
   |                 ^^^^^^^

error: expected `=`
  --> tests/compilation/method_attrs.rs:24:24
   |
24 |     #[dyn_utils(storage(dyn_utils::DefaultStorage))]
   |                        ^

error: expected identifier
  --> tests/compilation/method_attrs.rs:30:27
   |
30 |     #[dyn_utils(storage = ?)]
   |                           ^

error: attribute must be used on a method with Return Position Impl Trait
  --> tests/compilation/method_attrs.rs:36:17
   |
36 |     #[dyn_utils(try_sync)]
   |                 ^^^^^^^^

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:43:5
   |
43 |     fn method(&self) -> impl Iterator<Item = ()>;
   |     ^^

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:49:5
   |
49 |     fn method(&self) -> impl Future;
   |     ^^

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:55:5
   |
55 |     fn method(&self) -> impl Future<Item = ()>;
   |     ^^

error: unknown attribute
  --> tests/compilation/method_attrs.rs:60:17
   |
60 |     #[dyn_utils(unknown)]
   |                 ^^^^^^^

error: `dyn_utils::sync` must be used on async method
  --> tests/compilation/method_attrs.rs:70:5
   |
70 |     fn method(&self) {}
   |     ^^

error[E0046]: not all trait items implemented, missing: `method`
  --> tests/compilation/method_attrs.rs:68:1
   |
65 |     fn method(&self);
   |     ----------------- `method` from trait
...
68 | impl Trait for () {
   | ^^^^^^^^^^^^^^^^^ missing `method` in implementation
